--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "jest-expo": "~50.0.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
